Comment out Customers link in reports.html
Comment out the Customers link in the reports HTML.

--- a/admin/reports.html
+++ b/admin/reports.html
@@ -385,8 +385,8 @@
               >
             </li>
             <li>
-              <a href="#"><i class="fas fa-users"></i> Customers</a
-              >
+              <!-- <a href="#"><i class="fas fa-users"></i> Customers</a
+              > -->
             </li>
             <li>
               <a href="reports.html" class="active"
