--- a/admin/orders.html
+++ b/admin/orders.html
@@ -42,7 +42,7 @@
               >
             </li>
             <li>
-              <a href="#"><i class="fas fa-users"></i> Customers</a>
+              <!-- <a href="#"><i class="fas fa-users"></i> Customers</a> -->
             </li>
             <li>
               <a href="../admin/reports.html"
