Update sidebar menu links in admin.html

--- a/admin/admin.html
+++ b/admin/admin.html
@@ -28,12 +28,12 @@
           <ul>
             <li>
               <a href="#" class="active"
-                ><i class="fas fa-tachometer-alt"></i> Dashboard</a
+                ><i class="fas fa-tachometer-alt"></i> Manage products</a
               >
             </li>
             <li>
               <a href="../admin/orders.html"
-                ><i class="fas fa-shopping-bag"></i> Orders</a
+                ><i class="fas fa-shopping-bag"></i> Manage Orders</a
               >
             </li>
             <li>
