--- a/admin/orders.html
+++ b/admin/orders.html
@@ -28,12 +28,12 @@
           <ul>
             <li>
               <a href="../admin/admin.html"
-                ><i class="fas fa-tachometer-alt"></i> Dashboard</a
+                ><i class="fas fa-tachometer-alt"></i> Manage Products</a
               >
             </li>
             <li>
               <a href="orders.html" class="active"
-                ><i class="fas fa-shopping-bag"></i> Orders</a
+                ><i class="fas fa-shopping-bag"></i> Manage Orders</a
               >
             </li>
             <li>
