--- a/admin/reports.html
+++ b/admin/reports.html
@@ -372,12 +372,12 @@
           <ul>
             <li>
               <a href="admin.html"
-                ><i class="fas fa-tachometer-alt"></i> Dashboard</a
+                ><i class="fas fa-tachometer-alt"></i> Manage Products</a
               >
             </li>
             <li>
               <a href="orders.html"
-                ><i class="fas fa-shopping-bag"></i> Orders</a
+                ><i class="fas fa-shopping-bag"></i> Manage Orders</a
               >
             </li>
             <li>
