--- a/admin/admin.html
+++ b/admin/admin.html
@@ -28,7 +28,7 @@
           <ul>
             <li>
               <a href="#" class="active"
-                ><i class="fas fa-tachometer-alt"></i> Manage products</a
+                ><i class="fas fa-tachometer-alt"></i> Manage Products</a
               >
             </li>
             <li>
