--- a/Pages/profile.html
+++ b/Pages/profile.html
@@ -37,10 +37,10 @@
         </ul>
       </nav>
 
-      <div class="header-icons">
+      <!-- <div class="header-icons">
         <a href="../pages/profile.html" aria-label="Profile">
           <i class="fas fa-user"></i>
-        </a>
+        </a> -->
         <a href="../pages/cart.html" aria-label="Shopping Cart">
           <i class="fas fa-shopping-cart"></i>
           <span class="cart-count">0</span>
