Update shopping cart link to relative path

--- a/Pages/contacts.html
+++ b/Pages/contacts.html
@@ -53,7 +53,7 @@
       <!-- Icons -->
       <div class="header-icons">
         
-        <a href="Pages/cart.html" aria-label="Shopping Cart">
+        <a href="cart.html" aria-label="Shopping Cart">
           <i class="fas fa-shopping-cart"></i>
           <span class="cart-count">0</span>
         </a>
