--- a/Pages/profile.html
+++ b/Pages/profile.html
@@ -41,7 +41,7 @@
         <a href="../pages/profile.html" aria-label="Profile">
           <i class="fas fa-user"></i>
         </a> -->
-        <a href="cart.html" aria-label="Shopping Cart">
+        <a href="../Pages/cart.html" aria-label="Shopping Cart">
           <i class="fas fa-shopping-cart"></i>
           <span class="cart-count">0</span>
         </a>
