Update category filter button labels to title case

--- a/Pages/Products.html
+++ b/Pages/Products.html
@@ -60,10 +60,10 @@
           <button class="filter-btn active" data-category="all">
             All Products
           </button>
-          <button class="filter-btn" data-category="poultry">Chicken</button>
-          <button class="filter-btn" data-category="beef">Beef</button>
-          <button class="filter-btn" data-category="pork">Pork</button>
-          <button class="filter-btn" data-category="eggs">Eggs</button>
+          <button class="filter-btn" data-category="Poultry">Chicken</button>
+          <button class="filter-btn" data-category="Beef">Beef</button>
+          <button class="filter-btn" data-category="Pork">Pork</button>
+          <button class="filter-btn" data-category="Eggs">Eggs</button>
         </div>
       </section>
 
