Add productDisplay.js script to about.html

--- a/Pages/about.html
+++ b/Pages/about.html
@@ -365,6 +365,7 @@ document.addEventListener('DOMContentLoaded', function() {
     );
 });
 </script>
+    <script type="module" src="../productsScripts/productDisplay.js"></script>
 
 </body>
 </html>
