profile cart icon

--- a/Pages/profile.html
+++ b/Pages/profile.html
@@ -37,15 +37,13 @@
         </ul>
       </nav>
 
-      <!-- <div class="header-icons">
-        <a href="../pages/profile.html" aria-label="Profile">
-          <i class="fas fa-user"></i>
-        </a> -->
-        <a href="../Pages/cart.html" aria-label="Shopping Cart">
-          <i class="fas fa-shopping-cart"></i>
-          <span class="cart-count">0</span>
-        </a>
-      </div>
+       <div class="header-icons">
+  <a href="../Pages/cart.html" aria-label="Shopping Cart">
+    <i class="fas fa-shopping-cart"></i>
+    <span class="cart-count">0</span>
+  </a>
+</div>
+
     </header>
 
     <!-- Profile Hero Section -->
